--- a/gooey/index.html
+++ b/gooey/index.html
@@ -21,6 +21,6 @@
         </defs>
       </svg>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js" defer></script>
   </body>
 </html>
